Fixed size issue on mobile devices

--- a/style.css
+++ b/style.css
@@ -186,7 +186,7 @@ label {
 
     .lowerPart .spanDash {
         color: hsl(259, 100%, 65%);
-        font-size: 4rem;
+        font-size: 2rem;
         font-style: italic;
         font-weight: 700;
         margin-right: 1rem;
@@ -194,7 +194,7 @@ label {
     }
     
     .lowerPart .spanText {
-        font-size: 3.5rem;
+        font-size: 2rem;
         font-style: italic;
         font-weight: 700;
     }
